Fix: Re-order search icon on mobile for better experience
Sadly changing order by css messes with tab order, but having it search,
then menu toggler, then menu on mobile view, means things stay
consistent when menu is expanded.

--- a/src/jio-navbar.css
+++ b/src/jio-navbar.css
@@ -186,6 +186,18 @@ button.nav-link {
 @media (max-width: 991px) {
   .navbar-toggler {
     display: block;
+    margin-left: 0;
+    order: 4;
+  }
+
+  jio-searchbox {
+    margin-left: auto;
+    margin-right: 10px;
+    order: 3;
+  }
+
+  .navbar-menu {
+    order: 5;
   }
 
   .navbar {
